@@ -1,0 +1,89 @@
+/*
+ *	subtitleeditor -- a tool to create or edit subtitle
+ *
+ *	http://home.gna.org/subtitleeditor/
+ *	https://gna.org/projects/subtitleeditor/
+ *
+ *	Copyright @ 2005-2008, kitone
+ *
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 3 of the License, or
+ *	(at your option) any later version.
+ *
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
+ *	You should have received a copy of the GNU General Public License
+ *	along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+ 
+#include "TimeUtility.h"
+#include "utility.h"
+
+/*
+ * Return the label of the framerate.
+ */
+Glib::ustring get_framerate_label(FRAMERATE framerate)
+{
+	Glib::ustring ret;
+
+	switch(framerate)
+	{
+	case FRAMERATE_23_976:	
+		ret = _("23.976 fps");
+		break;
+	case FRAMERATE_24:	
+		ret = _("24 fps");
+		break;
+	case FRAMERATE_25:	
+		ret = _("25 fps");
+		break;
+	case FRAMERATE_29_97:	
+		ret = _("29.97 fps");
+		break;
+	case FRAMERATE_30:	
+		ret = _("30 fps");
+		break;
+	default:
+		ret = _("Invalid fps");
+		break;
+	}
+
+	return ret;
+}
+
+/*
+ * Return the real value of the framerate.
+ */
+float get_framerate_value(FRAMERATE framerate)
+{
+	float ret = 0;
+
+	switch(framerate)
+	{
+	case FRAMERATE_23_976:	
+		ret = 23.976; // 24 / 1.001
+		break;
+	case FRAMERATE_24:	
+		ret = 24;
+		break;
+	case FRAMERATE_25:	
+		ret = 25;
+		break;
+	case FRAMERATE_29_97:	
+		ret = 29.97; // 30 / 1.001
+		break;
+	case FRAMERATE_30:	
+		ret = 30;
+		break;
+	default:
+		ret = 0;
+		break;
+	}
+
+	return ret;
+}
+
